--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,7 @@
-﻿asgiref==3.7.2
-blinker==1.6.2
-click==8.1.6
-colorama==0.4.6
-Flask==2.3.2
-Flask-Cors==4.0.0
-gunicorn==21.2.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-joblib==1.3.2
-MarkupSafe==2.1.3
-numpy>=1.26.0
-packaging==23.1
-pandas==2.0.3
-python-dateutil==2.8.2
-pytz==2023.3
-scikit-learn==1.2.1
-scipy==1.11.1
-six==1.16.0
-threadpoolctl==3.2.0
-tzdata==2023.3
-Werkzeug==2.3.6
+streamlit==1.32.2
+pandas==2.2.1
+numpy==1.26.4
+scikit-learn==1.4.2
+joblib==1.4.0
+matplotlib==3.8.4
+seaborn==0.13.2
