--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit==1.32.2
 pandas==2.2.1
 numpy==1.26.4
-scikit-learn==1.2.1
+scikit-learn>=1.3.0  
 joblib==1.4.0
 matplotlib==3.8.4
 seaborn==0.13.2
